# krater

./: .gitignore  CMakeLists.txt  README.md
include/: debug.hpp  device.hpp  initializers.hpp  kraterapp.hpp  model.hpp  pipeline.hpp  render.hpp  resource.hpp  swapchain.hpp  texture.hpp  window.hpp
shaders/: compile.bat
src/: debug.cpp  device.cpp  initializers.cpp  kraterapp.cpp  main.cpp  pipeline.cpp  render.cpp  resource.cpp  swapchain.cpp
